<resources>
    <string name="app_name">logindemo</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="customer_name">Name:</string>
    <string name="customer_gender">Gender:</string>
    <string name="welcome_slogan">Welcome To Skala Fintech</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="customer_age">Age:</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_questions">QuestionsActivity</string>
    <string name="tab_Q1">Q1</string>
    <string name="tab_Q2">Q2</string>
    <string name="tab_Q3">Q3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Q: %1$d</string>
    <string name="toolbar_Question">Insight Question</string>

    <string name="title_activity_choose_location">ChooseLocationActivity</string>
    <string name="dummy_button">Continue</string>
    <string name="dummy_content">Choose Your Location</string>

</resources>
