<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_slogan"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ed_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/rbg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_gender"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_Male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/rb_Female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_female" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/customer_age"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ed_Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/button_Next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next" />

</LinearLayout>